Blackpurl/src/objects/Leave__c.object
<CustomObject>
    <fields>
        <fullName>From_Date__c</fullName>
        <formula>DATEVALUE( From__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>Technician__c</referenceTo>
        <relationshipLabel>Leaves</relationshipLabel>
        <relationshipName>Leaves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <formula>DATEVALUE(To__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>DateTime</type>
    </fields>
    <label>Leave</label>
    <nameField>
        <label>Leave Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>